--- a/CarbonFootprint_site/templates/0 - layout.html
+++ b/CarbonFootprint_site/templates/0 - layout.html
@@ -127,6 +127,7 @@
 
         <link rel="stylesheet" href="static/style.css"/>
         <link rel="stylesheet" href="static/base_layout.css"/>
+        <link rel="stylesheet" href="static/main.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script:wght@400&amp;display=swap" data-tag="font"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" data-tag="font"/>
 
