--- a/CarbonFootprint_site/templates/results.html
+++ b/CarbonFootprint_site/templates/results.html
@@ -1,122 +1,56 @@
 {%extends "0 - layout.html"%}
+{% from "_plot_helper.html" import render_plot_script, render_comparison_plot_script, render_subclass_plot_script%}
 {%block title%}Results{%endblock%}
 {%block content%}
-<link href="static/results.css" rel="stylesheet" />
-<div class="results-container01">
-<h1>
-  <span>Results</span>
-  <br />
-</h1>
-<div class="results-container02">
-  <div class="results-container03">
-    <div class="results-container04">
-      <div class="results-container05">
-        <h1>Total impact</h1>
-        <div class="results-container06">
-          <span>Carbon dioxide produced per day:&nbsp;</span>
-          <span class="results-text05">{{main_class.co2_cost}}</span>
-          <span class="results-text06">[kgCO2/day]</span>
-        </div>
-      </div>
-      <div><canvas id="pie_total_chart"></canvas></div>
-    </div>
-    <div class="results-container07">
-      <h1 class="results-text07">You respect the world</h1>
-      <img
-        alt="image"
-        src="static/images/grafico_comparativa.png"
-        class="results-image3"
-      />
-    </div>
-  </div>
-  <div class="results-container08">
-    <div class="results-container09">
-      <h1 class="results-text08">Diet</h1>
-      <div class="results-container10">
-        <span class="results-text09">Total amount:</span>
-        <span class="results-text10">{{main_class.input_list[0].co2_cost}}</span>
-        <span class="results-text11">[kgCO2/day]</span>
-      </div>
-      <img
-        alt="image"
-        src="static/images/grafico_dieta.png"
-        class="results-image4"
-      />
-    </div>
-    <div class="results-container11">
-      <h1 class="results-text12">Transport</h1>
-      <div class="results-container12">
-        <span class="results-text13">Total amount:</span>
-        <span class="results-text14">{{main_class.input_list[1].co2_cost}}</span>
-        <span class="results-text15">[kgCO2/day]</span>
-      </div>
-      <img
-        alt="image"
-        src="static/images/grafico_trasporti.png"
-        class="results-image5"
-      />
-    </div>
-  </div>
-  <div class="results-container13">
-    <div class="results-container14">
-      <h1 class="results-text16">Home</h1>
-      <div class="results-container15">
-        <span class="results-text17">Total amount:</span>
-        <span class="results-text18">{{main_class.input_list[2].co2_cost}}</span>
-        <span class="results-text19">[kgCO2/day]</span>
-      </div>
-      <img
-        alt="image"
-        src="static/images/grafico_casa.png"
-        class="results-image6"
-      />
-    </div>
-    <div class="results-container16">
-      <h1 class="results-text20">Textile</h1>
-      <div class="results-container17">
-        <span class="results-text21">Total amount:</span>
-        <span class="results-text22">{{main_class.input_list[3].co2_cost}}</span>
-        <span class="results-text23">[kgCO2/day]</span>
-      </div>
-      <img
-        alt="image"
-        src="static/images/grafico_abbigliamento.png"
-        class="results-image7"
-      />
-    </div>
-  </div>
+<div class="subsection-class-no-border">
+  <span class="home-text-fancy">
+    Here you can find some results evaluated from the information that you have provided!
+  </span>
 </div>
-<span class="results-text24">
-  An excel file with your data has been created, let's download
-  it&nbsp;
-</span>
+<fieldset class="subsection-class">
+  <legend class="text-title">MAIN RESULTS</legend>
+  <div class="subsection-container">
+    <fieldset class="container-sub-subsection">
+        <legend>Total impact</legend>
+        <div><canvas id={{main_class.plotter.id}} class="canvas-class"></canvas></div>
+    </fieldset>
+    <fieldset class="container-sub-subsection">
+      <legend>You respect the world</legend>
+      <div><canvas id={{main_class.plotter.comparison_id}} class="canvas-class"></canvas></div>
+    </fieldset>
+  </div>
+</fieldset>
+<fieldset class="subsection-class">
+  <legend class="text-title">CATEGORY RESULTS</legend>
+  <div class="subsection-container">
+    {% for sub_class in main_class.input_list %}
+    <fieldset class="container-sub-subsection">
+      <legend> {{ sub_class.name }} </legend>
+      <div><canvas id={{sub_class.plotter.id}} class="canvas-class"></canvas></div>
+    </fieldset>
+    {% endfor %}
+  </div>
+</fieldset>
+
+<!--
+UNCOMMENT THIS TO IMPLEMENT THE EXCEL DOWNLOAD PROCEDURE
+
+<div class="subsection-class">
+  <span class="home-text-fancy">
+    An excel file with your data has been created, let's download it
+  </span>
+  <a href="/download">
+    <button class="home-button button">Download</button>
+  </a>
 </div>
-<a href="/download">
-<button class="results-button button">Download</button>
-</a>
+-->
+
 {%endblock%}
 {%block finalremarks%}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  const ctx = document.getElementById('pie_total_chart');
-
-  new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-      datasets: [{
-        label: '# of Votes',
-        data: [12, 19, 3, 5, 2, 3],
-        borderWidth: 1
-      }]
-    },
-    options: {
-      scales: {
-        y: {
-          beginAtZero: true
-        }
-      }
-    }
-  });
-</script>
+{{ render_plot_script(main_class.plotter) }}
+{{ render_comparison_plot_script(main_class.plotter)}}
+{% for sub_class in main_class.input_list %}
+    {{ render_plot_script(sub_class.plotter)}}
+{% endfor %}
 {%endblock%}
