--- a/CarbonFootprint_site/templates/results.html
+++ b/CarbonFootprint_site/templates/results.html
@@ -1,5 +1,5 @@
 {%extends "0 - layout.html"%}
-{% from "_plot_helper.html" import render_plot_script, render_comparison_plot_script, render_subclass_plot_script%}
+{% from "support/_plot_helper.html" import render_plot_script, render_comparison_plot_script, render_subclass_plot_script%}
 {%block title%}Results{%endblock%}
 {%block content%}
 <div class="subsection-class-no-border">
