--- a/CarbonFootprint_site/templates/results.html
+++ b/CarbonFootprint_site/templates/results.html
@@ -12,7 +12,14 @@
   <div class="subsection-container">
     <fieldset class="container-sub-subsection">
         <legend>Total impact</legend>
-        <div><canvas id={{main_class.plotter.id}} class="canvas-class"></canvas></div>
+        <div class="inside-container">
+          <canvas id={{main_class.plotter.id}} class="canvas-class"></canvas>
+          <p class="label">
+            Total Emission<br>
+            <span class="big">{{main_class.plotter.overall_yearly_ton_impact}}</span><br>
+            [Ton CO<sub>2</sub> / year]
+          </p>
+        </div>
     </fieldset>
     <fieldset class="container-sub-subsection">
       <legend>You respect the world</legend>
@@ -26,7 +33,14 @@
     {% for sub_class in main_class.input_list %}
     <fieldset class="container-sub-subsection">
       <legend> {{ sub_class.name }} </legend>
-      <div><canvas id={{sub_class.plotter.id}} class="canvas-class"></canvas></div>
+      <div class="inside-container">
+        <canvas id={{sub_class.plotter.id}} class="canvas-class"></canvas>
+        <p class="label">
+          Total Emission<br>
+          <span class="big">{{sub_class.plotter.overall_yearly_ton_impact}}</span><br>
+          [Ton CO<sub>2</sub> / year]
+        </p>
+      </div>
     </fieldset>
     {% endfor %}
   </div>
