--- a/CarbonFootprint_site/templates/0 - layout.html
+++ b/CarbonFootprint_site/templates/0 - layout.html
@@ -98,13 +98,15 @@
 
             html {
 
-                font-family: Inter;
+                font-family: 'Titillium Web',sans-serif;
                 font-size: 16px;
+
             }
 
             body {
 
                 font-weight: 400;
+                font-family: 'Titillium Web',sans-serif;
                 font-style:normal;
                 text-decoration: none;
                 text-transform: none;
@@ -115,19 +117,11 @@
 
             }
         </style>
-        <style data-section-id="dropdown">
-          [data-thq="thq-dropdown"]:hover > [data-thq="thq-dropdown-list"] {
-              display: flex;
-            }
-
-            [data-thq="thq-dropdown"]:hover > div [data-thq="thq-dropdown-arrow"] {
-              transform: rotate(90deg);
-            }
-        </style>
 
         <link rel="stylesheet" href="static/style.css"/>
         <link rel="stylesheet" href="static/base_layout.css"/>
         <link rel="stylesheet" href="static/main.css"/>
+        <link rel="stylesheet" href="https://fonts.google.com/specimen/Titillium+Web?query=titilli" data-tag="font"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script:wght@400&amp;display=swap" data-tag="font"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" data-tag="font"/>
 
