--- a/CarbonFootprint_site/templates/0 - layout.html
+++ b/CarbonFootprint_site/templates/0 - layout.html
@@ -141,7 +141,7 @@
 
             <footer class="footer_class">
                 <div class="footer_text">
-                    © 2023 CarbonApp, All Rights Reserved.
+                    University of Florence - CarbonApp
                 </div>
             </footer>
 
