--- a/CarbonFootprint_site/templates/0 - layout.html
+++ b/CarbonFootprint_site/templates/0 - layout.html
@@ -121,9 +121,9 @@
         <link rel="stylesheet" href="static/style.css"/>
         <link rel="stylesheet" href="static/base_layout.css"/>
         <link rel="stylesheet" href="static/main.css"/>
-        <link rel="stylesheet" href="https://fonts.google.com/specimen/Titillium+Web?query=titilli" data-tag="font"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script:wght@400&amp;display=swap" data-tag="font"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" data-tag="font"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -131,8 +131,8 @@
 
             <header data-role="Header" class="header_class">
 
-                <a href='/'><img alt="logo" src="static/images/logo_app.png" class="header-logo-image"/></a>
                 <a href='https://www.unifi.it/changelang-eng.html' target="_blank"><img alt="image" src="static/images/logo_unifi.png" class="header-logo-image"/></a>
+                <a href='/'><img alt="logo" src="static/images/logo_app.png" class="header-logo-image"/></a>
 
             </header>
 
@@ -141,7 +141,9 @@
 
             <footer class="footer_class">
                 <div class="footer_text">
-                    University of Florence - CarbonApp
+                    CarbonApp è un prodotto del Dipartimento di Ingegneria Industriale dell'Università di Firenze.
+                    Il responsabile del dominio assume la responsabilità del sito quanto a privacy,
+                    protezione dati, accessibilità, usabilità e contenuti.
                 </div>
             </footer>
 
