--- a/CarbonFootprint_site/templates/how-it-works.html
+++ b/CarbonFootprint_site/templates/how-it-works.html
@@ -3,47 +3,53 @@
 {%block content%}
 <link href="static/how-it-works.css" rel="stylesheet" />
 <div class="how-banner">
-  <div>
-    <span class="title-text">
-    How it works
-    <br>
-    <span class="text-fancy">
-      A brief introduction to CarbonApp
-    </span>
-  </span>
-  </div>
-  <div class="text-container">
-    <span class="text-std">
-
-      CarbonApp is a calculator that calculates the emissions of Carbon Dioxide
-      equivalent related to the lifestyle of a single person. To evaluate the impact of a specific
-      person we use data provided by the user about hiss or hers lifestyle. These data are converted into a emission
-      factor using correlations retrieved in the scientific literature. The sources are listed in the Excel file that
-      you can download at the end of the page.
-      <br>
-      For the <span class="text-bold">Diet</span> section the user have to insert data about a typical week, and what you
-      eat in average quantities. For the <span class="text-bold">Transport</span> section, you have to similarly insert
-      data about which method to move around in a typical week you use. Obviously, the number of kilometers travelled by
-      foot or by bike are not considered as they are associated with negligible emissions. For the
-      <span class="text-bold">House</span> section, the first thing to insert is the number of people that you
-      share the house with, because it allows to distribute the impact of some part, like the impact of house heating or washing machine;
-      the elements that are corrected with the number of family members are indicated into the information box below
-      the input groups. For the <span class="text-bold">Clothes</span> section, you have to insert the number
-      of clothes that you buy each year.
-      <br>
-      Once you have done with the input collection you can press the "Calculate" button in order to see your results.
-
-    </span>
+  <div class="ovr_container">
+    <div class="text-container">
+      <span class="title-text">
+        How it works
+        <br>
+        <span class="text-fancy">
+          A brief introduction to CarbonApp
+        </span>
+      </span>
+    </div>
+    <div class="text-container">
+      <span class="text-std">
+        CarbonApp is a calculator that calculates the emissions of Carbon Dioxide
+        equivalent related to the lifestyle of a single person. To evaluate the impact of a specific
+        person we use data provided by the user about hiss or hers lifestyle. These data are converted into a emission
+        factor using correlations retrieved in the scientific literature. The sources are listed in the Excel file that
+        you can download at the end of the page.
+      </span>
+    </div>
+    <div class="text-container">
+      <span class="text-std">
+        For the <span class="text-bold">Diet</span> section the user have to insert data about a typical week, and what you
+        eat in average quantities. For the <span class="text-bold">Transport</span> section, you have to similarly insert
+        data about which method to move around in a typical week you use. Obviously, the number of kilometers travelled by
+        foot or by bike are not considered as they are associated with negligible emissions. For the
+        <span class="text-bold">House</span> section, the first thing to insert is the number of people that you
+        share the house with, because it allows to distribute the impact of some part, like the impact of house heating or washing machine;
+        the elements that are corrected with the number of family members are indicated into the information box below
+        the input groups. For the <span class="text-bold">Clothes</span> section, you have to insert the number
+        of clothes that you buy each year.
+      </span>
+    </div>
+    <div class="text-container">
+      <span class="text-std">
+        Once you have done with the input collection you can press the "Calculate" button in order to see your results.
+      </span>
+    </div>
   </div>
   <div class="subsection-class">
-    <span class="home-text-fancy">
-      With the following button you can download an Excel file that
-      contains all the reference and data used for this web site
-    </span>
-    <a href="/references">
-      <button class="home-button button">References</button>
-    </a>
-  </div>
+  <span class="home-text-fancy">
+    With the following button you can download an Excel file that
+    contains all the reference and data used for this web site
+  </span>
+  <a href="/references">
+    <button class="home-button button">References</button>
+  </a>
+</div>
 </div>
 {%endblock%}
 
