--- a/CarbonFootprint_site/templates/main.html
+++ b/CarbonFootprint_site/templates/main.html
@@ -2,22 +2,27 @@
 {%block title%}Results{%endblock%}
 {%block content%}
 <div class="home-banner">
-  <h1 class="title-text">Our Mission</h1>
-  <span class="text-fancy">
-    Welcome to our Carbon Footprint Calculator! Take control of your
-    environmental impact and pave the way to a more sustainable
-    lifestyle. Our user-friendly tool empowers individuals like you to
-    calculate their carbon footprint based on their unique lifestyle
-    choices
-  </span>
-  <a href='/explanation'>
-    <button class="home-button button">How it works</button>
-  </a>
-  <span class="text-fancy">
-    Start calculating your carbon footprint today and pave the way
-    towards a more sustainable and environmentally conscious lifestyle.
-    Together, we can make a difference for a greener tomorrow!
-  </span>
+  <div class="ovr_container">
+    <div class="title-text">Our Mission</div>
+    <div class="text-fancy">
+      Welcome to our Carbon Footprint Calculator! Take control of your
+      environmental impact and pave the way to a more sustainable
+      lifestyle. Our user-friendly tool empowers individuals like you to
+      calculate their carbon footprint based on their unique lifestyle
+      choices
+    </div>
+    <div class="text-fancy">
+      Start calculating your carbon footprint today and pave the way
+      towards a more sustainable and environmentally conscious lifestyle.
+      Together, we can make a difference for a greener tomorrow!
+    </div>
+  </div>
+  <div class="vl"></div>
+  <div class="background-button">
+    <a href='/explanation'>
+      <button class="home-button button">How it works</button>
+    </a>
+  </div>
 </div>
 {%block form%}
 {%endblock%}
