--- a/CarbonFootprint_site/templates/0 - layout.html
+++ b/CarbonFootprint_site/templates/0 - layout.html
@@ -141,9 +141,8 @@
 
             <footer class="footer_class">
                 <div class="footer_text">
-                    CarbonApp è un prodotto del Dipartimento di Ingegneria Industriale dell'Università di Firenze.
-                    Il responsabile del dominio assume la responsabilità del sito quanto a privacy,
-                    protezione dati, accessibilità, usabilità e contenuti.
+                    CarbonApp - developed by the <a href='https://www.dief.unifi.it/vp-167-serg.html' target="_blank">SERG Group</a>, 
+                    part of the Department of Industrial Engeneering, University of Florence
                 </div>
             </footer>
 
