--- a/CarbonFootprint_site/templates/support/form_layout.html
+++ b/CarbonFootprint_site/templates/support/form_layout.html
@@ -5,7 +5,7 @@
   {{ render_form(form, main_class.input_list) }}
   <div class="subsection-class">
     <span class="home-text-fancy">
-      Once you have filled you data hit the bottom below!!
+      Once you have filled your data hit the bottom below!!
     </span>
     <button class="home-button button">Calculate</button>
   </div>
